# dexmachina

./: .gitignore  README.md  pyproject.toml
dexmachina/assets/contact_retarget/allegro_hand/s01/: box_use_01.npy  mixer_use_01.npy
dexmachina/assets/retargeted/allegro_hand/s01/: box_use_01_vector_para.pt  mixer_use_01_vector_para.pt  waffleiron_use_01_vector_para.pt
dexmachina/envs/: demo_data.py
dexmachina/rl/: eval_rl_games.py  eval_rl_games_with_metrics.py
dexmachina/utils/: compute_add_auc_from_eval.py  part_add_metrics.py
eval_scripts/: eval_array.slurm  eval_array_w_metrics.slurm  eval_checkpoints.txt
training_scripts/: runs.tsv  train.slurm  train_array.slurm
