[project]
name = "dexmachina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "genesis-world",
    "gymnasium>=1.2.3",
    "libigl==2.5.1",
    "moviepy>=2.2.1",
    "numpy==1.26.4",
    "ray>=2.53.0",
    "rl-games",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "trimesh>=4.11.0",
    "wandb>=0.12.21",
]

[tool.uv]
override-dependencies = [
  "pymeshlab<2025.7",
]

[tool.uv.sources]
genesis-world = { git = "https://github.com/MandiZhao/Genesis.git", rev = "e9df2d8f7d30595d65cabdc618c6b5ca8cc657e2" }
rl-games = { git = "https://github.com/MandiZhao/rl_games.git" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
